docs: reflect 2026-04-15 polish round in HANDOFF + CHANGELOG
Seven fixes shipped since 3e84a22 (ABCL round), each found via
adversarial testing rather than speculation:

- f19f3c1 node/groovy signals.interrupt live verification (two
  adapters mis-declared capabilities; corrected + nullable
  schema + capabilities.interrupt:false)
- 09b71f2 ReplaceOscTitle test coverage (37 assertions, pinned
  the split-chunk buffer leak pre-fix)
- 737f0a3 split-chunk OSC title buffer fix (user-reported
  "window title sometimes not set correctly")
- 39b6a83 nested datum comment counter fix (#;#;(a) was reporting
  complete when it needed a second datum)
- c90d3f1 SW_SHOWNOACTIVATE + input.clear_line infra (focus-theft
  defense + line-editor buffer flush for bash/zsh, opt-in for
  everything else because Python basic REPL / fsi / Racket / CCL /
  ABCL have no line editor to target)
- feac057 per-adapter clear_line regression pins
- ca78f95 ModeDetector input source fix (was scanning OSC-C..D
  slice which can never contain the post-A prompt, then fell
  back to VtLite rendering which reshapes prompts into cell-
  addressed form that breaks anchored regexes — both missed the
  mode transition and silently fell through to default mode;
  now scans raw ring bytes in a 150 ms poll loop)

HANDOFF.md:
- Current-state paragraph reframes the session as the "polish
  round" and lists all seven fixes inline. Assertion count
  bumped to 578. §18 Q2 "closed" is now explicit about the
  empirical evidence being the CCL break-loop chain + the
  ModeDetector input fix, not just declarative YAML.
- Warm-up checklist replaces `--test --e2e` with separate
  `--test` and `--adapter-tests` invocations, documenting why
  `--test --e2e` is blocked by the pre-existing flakes.
- Reading list gets three new rows: OSC title / split-chunk
  buffer, console focus / buffer flush, mode detector + input
  source — each pointing at the file and symbol a future
  session needs to touch.
- Gotchas gets seven new e